Fix classPath URL